# qlib

./: .qmake.stash  Makefile  mainqlib.cpp  moc_qlib.cpp  qlib.cpp  qlib.h  qlib.pro
build-plib-Desktop_Qt_5_4_0_GCC_64bit-Release/: Makefile
plib/: CMakeLists.txt  Makefile  clib.c  clib.h  mainplib.cpp  plib  plib.cpp  plib.h  plib.pro  plib.pro.user.4c6b03f  plib.pro.user.91e2296  pmysql.cpp  pmysql.h  ptcp.cpp  ptcp.h  pudp.cpp  pudp.h  pxml.cpp  pxml.h
plib/test/: testptcp.h  testptime.h  testpudp.h  testserialization.h  testudp.h
